--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ GeneratedPluginRegistrant.m
 GeneratedPluginRegistrant.java
 build/
 .flutter-plugins
+example/ios/Flutter/flutter_export_environment.sh
